Borrado indexregistrado, implementada la descripcion de las pelicualas acesible haciendo click en los titulos

--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -10,3 +10,8 @@ body {
 	overflow-y: scroll;
 	background-color: rgb(200, 250, 30)
 }
+
+.movie-container {
+	background-color: rgb(200, 200, 200);
+	border: 1px solid #ddd;
+}
