--- a/app/templates/carrito.html
+++ b/app/templates/carrito.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
 {% block register %}{% endblock%}
-{% block carrito %}{% endblock%}
+{% block carrito %}
+
+<div>
+    asd
+</div>
+
+{% endblock%}
 
