--- a/app/templates/descripcion.html
+++ b/app/templates/descripcion.html
@@ -4,17 +4,22 @@
 {% block carrito %}{% endblock%}
 
 {% block content%}
-	<div class = "informacionPelicula">
-		 <img src = {{ pelis.poster }} alt = {{ pelis.titulo }}>
-			<div class = "descripcionPelicula">
-				<p><b>Titulo: </b>{{ pelis.titulo }}</p><br>
-				<p><b>Fecha: </b>{{ pelis.año }}</p><br>
-				<p><b>Sinopsis: </b>{{ pelis.sinopsis }}</p><br>
-				<p><b>Criticas: </b>{{ pelis.criticas }}</p><br>
-			</div>
+<div class="informacionPelicula">
+	<img src={{ peli.poster }} alt={{ peli.titulo }}>
+	<div class="descripcionPelicula">
+		<p><b>Titulo: </b>{{ peli.titulo }}</p><br>
+		<p><b>Fecha: </b>{{ peli.año }}</p><br>
+		<p><b>Sinopsis: </b>{{ peli.sinopsis }}</p><br>
+		<p><b>Criticas: </b>{{ peli.criticas }}</p><br>
 	</div>
+	<div>
+		<form>
+			<input type="submit" name="Añadir al carrito", value="addToCart">
+		</form>
+	</div>
+</div>
 
-	<div class = "BotonyValoracion">
-		
-	</div>
- {% endblock %}
+<div class="BotonyValoracion">
+
+</div>
+{% endblock %}
