--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
 	{% block register %}{% endblock%}
 	{% block carrito %}{% endblock%}
         {% if not session['usuario'] %}
-        <a href="{{ url_for('login') }}">Sign In</a></div>
+        <a href="{{ url_for('login') }}">Sign In</a>
+        <a href="{{ url_for('registro') }}">Registro</a></div>
         <span>Usuario:desconocido</span>
         {% else %}
         <a href="{{ url_for('logout') }}">Log out</a></div>
