--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}- VideoClub</title>
     <!-- Uso de url_for para obtener la ruta de elementos de la página -->
-    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='estilo.css') }}/>
+    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='estilo.css' ) }} />
 </head>
+
 <body>
     <div>VideoClub:
         <a href="{{ url_for('index') }}">Home</a>
-	{% block register %}{% endblock%}
-	{% block carrito %}{% endblock%}
+        <a href="{{ url_for('carrito') }}">carrito</a>
+
         {% if not session['usuario'] %}
         <a href="{{ url_for('login') }}">Sign In</a>
-        <a href="{{ url_for('registro') }}">Registro</a></div>
+        <a href="{{ url_for('registro') }}">Registro</a>
         <span>Usuario:desconocido</span>
         {% else %}
-        <a href="{{ url_for('logout') }}">Log out</a></div>
+        <a href="{{ url_for('logout') }}">Log out</a>
         <span>Usuario:{{ session['usuario'] }}</span>
         {% endif%}
     </div>
+
     {% block content%} {% endblock %}
 </body>
+
 </html>
