--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,21 +9,35 @@
 </head>
 
 <body>
-    <div>VideoClub:
+    <div class="header">
+        VideoClub:
+        {% if not session['usuario'] %}
+        <span>Usuario:desconocido</span>
+        {% else %}
+        <span>Usuario:{{ session['usuario'] }}</span>
+        {% endif%}
+    </div>
+
+    <div class="side-bar">
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('carrito') }}">carrito</a>
 
         {% if not session['usuario'] %}
         <a href="{{ url_for('login') }}">Sign In</a>
         <a href="{{ url_for('registro') }}">Registro</a>
-        <span>Usuario:desconocido</span>
+
         {% else %}
         <a href="{{ url_for('logout') }}">Log out</a>
-        <span>Usuario:{{ session['usuario'] }}</span>
         {% endif%}
     </div>
 
-    {% block content%} {% endblock %}
+    <div class="content">
+        {% block content%} {% endblock %}
+    </div>
+
+    <div class="footer">
+        Pablo y Gian
+    </div>
 </body>
 
 </html>
