--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,6 @@
     {{ title }}
 {% endblock%}
 
-{% block register %}
-{% endblock%}
-
-
 {% block content %}
 
 <script>
@@ -28,7 +24,7 @@
  </form>
 <div id="container">
 {% for item in movies %}
-<div class="movie-container", id="{{ item.id }}" onclick="location.href='{{ url_for('descripcion') ~ "?film_id=" ~ item.id }}';" style="cursor: pointer;">
+<div class="movie-container", id="{{ item.id }}" onclick="location.href='{{ url_for('descripcion', id_pelicula = item.id)  }}';" style="cursor: pointer;">
     <img src=" {{ url_for('static', filename='img/' + item.poster) }} ">
     <div class="movie-container-texto">
         {{ item.titulo }}
