--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {{ title }}
+{{ title }}
 {% endblock%}
 
 {% block content %}
@@ -11,29 +11,38 @@
         const elements = document.getElementsByClassName('movie-container')
         for (const element of elements) {
             const num = parseFloat(element.id)
-            element.style.backgroundColor = "hsl(" + 360 * ((num*13)%15)/15 + ',' +
-            (25 + 70 * ((num*13)%15)/15) + '%,' + 
-            (85 + 10 * ((num*13)%15)/15) + '%)'
+            element.style.backgroundColor = "hsl(" + 360 * ((num * 13) % 15) / 15 + ',' +
+                (25 + 70 * ((num * 13) % 15) / 15) + '%,' +
+                (85 + 10 * ((num * 13) % 15) / 15) + '%)'
         }
     }
 </script>
 
-<form name = "busqueda-drop" method="POST">
-            	<input type="text" name = "texto_busqueda" class = "search" placeholder="Search..">
-            	<input type="submit" name="submit" class = "submit" value = "Search"/>
- </form>
-<div id="container">
-{% for item in movies %}
-<div class="movie-container", id="{{ item.id }}" onclick="location.href='{{ url_for('descripcion', id_pelicula = item.id)  }}';" style="cursor: pointer;">
-    <img src=" {{ url_for('static', filename='img/' + item.poster) }} ">
-    <div class="movie-container-texto">
-        {{ item.titulo }}
-        <p id='movie-container-sinopsis'>
-            {{ item.sinopsis }}
-        </p>
-    </div>
+<div id="busqueda-index-container">
+    <form name="busqueda-drop" method="POST" id="busqueda-index">
+        <input type="text" name="texto_busqueda" class="search" placeholder="Search..">
+        <input type="submit" name="submit" class="submit" value="Search" />
+    </form>
 </div>
-{% endfor %}
+
+<div id="container">
+    {% if not movies %}
+    <div class="comment">
+        No hay resultados para esta búsqueda
+    </div>
+    {% endif %}
+    {% for item in movies.values() %}
+    <div class="movie-container" , id="{{ item.id }}"
+        onclick="location.href='{{ url_for('descripcion', id_pelicula = item.id)  }}';" style="cursor: pointer;">
+        <img src=" {{ url_for('static', filename='img/' + item.poster) }} ">
+        <div class="movie-container-texto">
+            <span class="movie-container-title">{{ item.titulo }}</span>
+            <p class='movie-container-sinopsis'>
+                {{ item.sinopsis }}
+            </p>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 
 {% endblock %}
