--- a/app/templates/descripcion.html
+++ b/app/templates/descripcion.html
@@ -13,9 +13,7 @@
 		<p><b>Criticas: </b>{{ peli.criticas }}</p><br>
 	</div>
 	<div>
-		<form>
-			<input type="submit" name="Add to cart", value="Add to cart">
-		</form>
+		<button type="button" class="add-to-cart" id="add-to-cart-{{ peli.id }}">Añadir al carrito</button>
 	</div>
 </div>
 
