--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -202,3 +202,31 @@ button#vaciar-carrito {
 	line-height: 30px;
 	min-width: 50px;
 }
+
+
+div.stars {
+	width: 300px;
+	display: inline-block;
+	font-weight: bold;
+  }
+  input.star { display: none; }
+  label.star {
+	float: right;
+	padding: 10px;
+	font-size: 36px;
+	color: #444;
+	transition: all .2s;
+  }
+  input.star:checked ~ label.star:before {
+	content: '\2605';
+	color: #FD4;
+	transition: all .25s;
+  }
+  input.star-5:checked ~ label.star:before {
+	color: #FE7;
+	text-shadow: 0 0 20px #952;
+  }
+  label.star:hover { transform: rotate(-15deg) scale(1.3); }
+  label.star:before {
+	content: '\2606';
+  }
