Hecha una funcion que permite mostrar mensajes en la aplicacion

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,9 @@
     </div>
 
     <div class="content">
+        <div id="message-container">
+            <span id="message">Message</span>
+        </div>
         {% block content%} {% endblock %}
     </div>
 
