--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -11,7 +11,7 @@ body {
 	padding: 10px;
 	background-color: #dde8f3;
 	width: 100%;
-	z-index:1;
+	z-index:5;
 }
 
 .side-bar {
@@ -42,7 +42,7 @@ button.side {
 
 .content {
 	float: right;
-	top: 40px;
+	top: 0;
 	right: 0;
 	bottom: 40px;
 	margin-bottom: 40px;
@@ -61,6 +61,8 @@ button.side {
 	font-size: xx-large;
 
 }
+
+/* Barra de busqueda */
 
 #busqueda-index-container {
 	position: sticky;
@@ -83,6 +85,31 @@ button.side {
 	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 	backdrop-filter: blur(5px);
 }
+
+/* Mensaje */
+
+#message-container {
+	display: none;
+	position: fixed;
+	top: 0px;
+	width: 84%;
+	z-index:1;
+	justify-content: center;
+	align-items: center;
+}
+
+#message {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	border-radius: 10px;
+	padding: 10px;
+	min-width: 20em;
+	background-color: rgba(255, 255, 255);
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
 
 
 button {
