--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -112,7 +112,7 @@ button.side {
 
 
 
-button {
+button, .button-style{
   background-color: rgb(218,229,246);
   border: 2px solid #422800;
   border-radius: 15px;
@@ -130,17 +130,17 @@ button {
   touch-action: manipulation;
 }
 
-button:hover {
+button:hover, .button-style:hover{
   background-color: #fff;
 }
 
-button:active {
+button:active, .button-style:active{
   box-shadow: #422800 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
 
 @media (min-width: 768px) {
-  button {
+  button, .button-style{
     min-width: 100px;
     padding: 0 25px;
   }
@@ -213,6 +213,10 @@ button:active {
 	line-height: 20px;
 	padding: 0;
 	border-radius: 10px;
+}
+
+.green-button {
+	background-color: rgb(214, 244, 238);
 }
 
 .remove-from-cart {
