--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,11 +32,11 @@
         <a href="{{ url_for('carrito') }}"><button class="side">Carrito</button></a>
 
         {% if not session['usuario'] %}
-        <a href="{{ url_for('login') }}"><button class="side">Iniciar Sesión</button></a>
+        <a href="{{ url_for('login') }}"><button class="side">Iniciar Sesion</button></a>
         <a href="{{ url_for('registro') }}"><button class="side">Registro</button></a>
 
         {% else %}
-        <a href="{{ url_for('logout') }}"><button class="side">Cerrar Sesión</button></a>
+        <a href="{{ url_for('logout') }}"><button class="side">Cerrar Sesion</button></a>
         {% endif%}
         {{ session['carrito'] }}
     </div>
