--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #F5F5F5;
 	padding: 0;
-  	margin: 0;
+	margin: 0;
 	font-size: large;
 }
 
@@ -11,7 +11,7 @@ body {
 	padding: 10px;
 	background-color: #dde8f3;
 	width: 100%;
-	z-index:5;
+	z-index: 5;
 }
 
 .side-bar {
@@ -23,7 +23,7 @@ body {
 	display: flex;
 	padding: 1%;
 	flex-direction: column;
-	
+
 }
 
 button.side {
@@ -48,12 +48,12 @@ button.side {
 	margin-bottom: 40px;
 	margin-top: 50px;
 	width: 84%;
-	z-index:-1;
-	
+	z-index: -1;
+
 }
 
 .comment {
-	color:rgb(129, 129, 129);
+	color: rgb(129, 129, 129);
 	text-align: center;
 }
 
@@ -67,7 +67,7 @@ button.side {
 #busqueda-index-container {
 	position: sticky;
 	top: 50px;
-	z-index:0;
+	z-index: 0;
 	left: 40%;
 	display: flex;
 	justify-content: center;
@@ -80,7 +80,7 @@ button.side {
 	backdrop-filter: blur(5px);
 }
 
-#busqueda-index{
+#busqueda-index {
 	margin-right: 1em;
 }
 
@@ -91,7 +91,7 @@ button.side {
 	position: fixed;
 	top: 0px;
 	width: 84%;
-	z-index:1;
+	z-index: 1;
 	justify-content: center;
 	align-items: center;
 }
@@ -110,38 +110,43 @@ button.side {
 
 
 
-button, .button-style{
-  background-color: rgb(218,229,246);
-  border: 2px solid #422800;
-  border-radius: 15px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-size: large;
-  padding: 0 18px;
-  line-height: 35px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+button,
+.button-style {
+	background-color: rgb(218, 229, 246);
+	border: 2px solid #422800;
+	border-radius: 15px;
+	box-shadow: #422800 4px 4px 0 0;
+	color: #422800;
+	cursor: pointer;
+	display: inline-block;
+	font-size: large;
+	padding: 0 18px;
+	line-height: 35px;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
 }
 
-button:hover, .button-style:hover{
-  background-color: #fff;
+button:hover,
+.button-style:hover {
+	background-color: #fff;
 }
 
-button:active, .button-style:active{
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
+button:active,
+.button-style:active {
+	box-shadow: #422800 2px 2px 0 0;
+	transform: translate(2px, 2px);
 }
 
 @media (min-width: 768px) {
-  button, .button-style{
-    min-width: 100px;
-    padding: 0 25px;
-  }
+
+	button,
+	.button-style {
+		min-width: 100px;
+		padding: 0 25px;
+	}
 }
 
 
@@ -155,7 +160,7 @@ button:active, .button-style:active{
 	flex-direction: row;
 	border-radius: 20px;
 	padding: 10px;
-	height: 150px;
+	height: 160px;
 	background-color: rgb(200, 200, 200);
 	margin-bottom: 1rem;
 	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
@@ -163,11 +168,11 @@ button:active, .button-style:active{
 
 .movie-container:hover {
 	box-shadow: 0 3px 20px rgb(0 0 0 / 0.3);
-  }
+}
 
 .movie-container:active {
 	transform: translate(2px, 2px);
-  }
+}
 
 .movie-container img {
 	width: auto;
@@ -183,19 +188,19 @@ button:active, .button-style:active{
 .movie-container-title {
 	font-size: x-large;
 	text-overflow: ellipsis;
-    overflow: hidden;
+	overflow: hidden;
 	display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
 }
 
 .movie-container-sinopsis {
 	font-size: medium;
 	text-overflow: ellipsis;
-    overflow: hidden;
+	overflow: hidden;
 	display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
 }
 
 .informacion-pelicula {
@@ -238,43 +243,55 @@ div.stars {
 	width: 300px;
 	display: inline-block;
 	font-weight: bold;
-  }
-  input.star { display: none; }
-  label.star {
+}
+
+input.star {
+	display: none;
+}
+
+label.star {
 	float: right;
 	padding: 10px;
 	font-size: 36px;
 	color: #444;
 	transition: all .2s;
-  }
-  input.star:checked ~ label.star:before {
+}
+
+input.star:checked~label.star:before {
 	content: '\2605';
 	color: #FE7;
 	transition: all .25s;
-  }
-  input.star-5:checked ~ label.star:before {
+}
+
+input.star-5:checked~label.star:before {
 	color: #FE7;
 	text-shadow: 0 0 20px rgb(93, 84, 52);
-  }
-  label.star:hover { transform: rotate(-15deg) scale(1.3); }
-  label.star:before {
-	content: '\2606';
-  }
+}
 
-  svg {
+label.star:hover {
+	transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before {
+	content: '\2606';
+}
+
+/* Estrellas inicio */
+
+svg {
 	margin-bottom: 2em;
-	width: 10%;
-  }
-  
-  .rating__background {
+	width: 5em;
+}
+
+.rating__background {
 	fill: #FFE372;
 	stroke: red;
 	stroke-width: 1;
 	height: 100%;
 	width: 100%;
-  }
-  
-  .rating__value {
+}
+
+.rating__value {
 	fill: #FFB94B;
 	height: 100%;
-  }
+}
