--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,7 @@
 
         {% else %}
         <a href="{{ url_for('historial') }}"><button class="side">Historial Compras</button></a>
+        <a href="{{ url_for('saldo') }}"><button class="side">Saldo</button></a>
         <a href="{{ url_for('logout') }}"><button class="side">Cerrar Sesion</button></a>
         {% endif%}
     </div>
