Estilo del registro

--- a/app/templates/registro.html
+++ b/app/templates/registro.html
@@ -18,35 +18,65 @@
 </script>
 {% endif %}
 
+<div class='page-title'>Registro</div>
+
 <form action="" method="POST" name="formu" onsubmit="return comprobarClave()">
-    <p>
-        Usuario:
-        <input name="usuario" type="text" MINLENGTH="5">
-    </p>
-    <p>
-        Email:
-        <input name="correo" type="email">
-    </p>
-    <p>
-        Clave:
-        <input name="clave" type="password" MINLENGTH="6" onkeyup="muestra_seguridad_clave(this.value, this.form)">
-        <i>seguridad:</i> <input name="seguridad" type="text" style="border: 0px;" onfocus="blur()">
-    </p>
-    <p>
-        Confirmación:
-        <input name="clave-confirmar" type="password" MINLENGTH="6">
-    </p>
-    <p>
-        Tarjeta de crédito:
-        <input name="tarjeta" type="text" MINLENGTH="16" MAXLENGTH="16">
-    </p>
-    <p>
-        Dirección:
-        <input name="direccion" type="text" MAXLENGTH="50">
-    </p>
-    <p>
-        <input type="submit" value="Registrar" class="button-style green-button">
-    </p>
+    <table>
+        <tr>
+            <td>
+                Usuario:
+            </td>
+            <td>
+                <input class="registro-input" name="usuario" type="text" MINLENGTH="5">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Email:
+            </td>
+            <td>
+                <input class="registro-input" name="correo" type="email">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Clave:
+            </td>
+            <td>
+                <input class="registro-input" name="clave" type="password" MINLENGTH="6"
+                    onkeyup="muestra_seguridad_clave(this.value, this.form)">
+                <input id="medidor-fortaleza" name="seguridad" type="text" onfocus="blur()">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Confirmación:
+            </td>
+            <td>
+                <input class="registro-input" name="clave-confirmar" type="password" MINLENGTH="6">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Tarjeta de crédito:
+            </td>
+            <td>
+                <input class="registro-input" name="tarjeta" type="text" MINLENGTH="16" MAXLENGTH="16">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Dirección:
+            </td>
+            <td>
+                <input class="registro-input" name="direccion" type="text" MAXLENGTH="50">
+            </td>
+        </tr>
+    </table>
+    <p></p>
+    <input type="submit" value="Registrar" class="button-style green-button">
+
+
 </form>
 
 {% endblock%}
