--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -316,6 +316,22 @@ table, th, td {
 	padding-top: 1em;
 }
 
+/* registro */
+
+.registro-input {
+	background-color: rgb(0 0 0 / 0);
+	border-width: 1px;
+	border-color: rgb(0 0 0 / 0.4);
+	border-radius: 5px;
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+#medidor-fortaleza {
+	border: none;
+	background-color: rgb(0 0 0 / 0);
+	width: 5em;
+}
+
 /* saldo */
 
 #input-saldo {
