--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,11 +16,11 @@
         </script>
     {% endif %}
 
-    <h1>Sign In</h1>
+    <div class='page-title'>Iniciar sesión</div>
     <form action="" method="post">
-        <label><b>Username</b></label>
+        <label>Username: </label>
         <input name="username" type="text" placeholder="Enter username" required>
-        <label><b>Password</b></label>
+        <label>Password: </label>
         <input name="password" type="password" placeholder="Enter password" required>
         <p>
         <input type="submit" value="Iniciar Sesion" class="button-style green-button">
