--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %}- VideoClub</title>
+    <title>{% block title %} {% endblock %}- VideoKlub</title>
     <!-- Uso de url_for para obtener la ruta de elementos de la página -->
     <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='estilo.css' ) }} />
     <script src="{{ url_for('static', filename='jquery.js') }}"></script>
@@ -11,6 +11,7 @@
         $SCRIPT_ROOT = {{ request.script_root | tojson }};
     </script>
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
 
 </head>
 
