--- a/app/templates/historial.html
+++ b/app/templates/historial.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block content %}
-
+<div class="page-content">
 <div class='page-title'>Historial de compras</div>
 
 <div>
@@ -29,6 +29,7 @@
             {% endfor %}
         {% endfor %}
       </table>
+</div>
 </div>
 {% endblock%}
 
