--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,7 +15,7 @@
             displayMessage("{{ mensaje_error }}", error=true);
         </script>
     {% endif %}
-
+    <div class="page-content">
     <div class='page-title'>Iniciar sesión</div>
     <form action="" method="post">
         <label>Username: </label>
@@ -26,4 +26,5 @@
         <input type="submit" value="Iniciar Sesion" class="button-style green-button">
     </p>
     </form>
+    </div>
 {% endblock %}
