--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,15 +17,13 @@
 
 <body>
     <div class="header">
-        VideoClub:
+        <span id="titulo-web">VideoClub</span>
         {% if not session['usuario'] %}
-        <span>Usuario: desconocido</span>
+        <span class="usuario-header">No se ha iniciado sesión</span>
         {% else %}
-        <span id="saldo-header">Saldo:</span>
         <script>actualizarSaldo()</script>
-        <span>Usuario: {{ session['usuario'] }}</span>
+        <span class="usuario-header">Usuario: {{ session['usuario'] }}</span>
         {% endif%}
-        <span id="user-count"></span>
     </div>
 
     <div class="side-bar">
@@ -40,7 +38,7 @@
 
         {% else %}
         <a href="{{ url_for('historial') }}"><button class="side">Historial Compras</button></a>
-        <a href="{{ url_for('saldo') }}"><button class="side">Saldo</button></a>
+        <a href="{{ url_for('saldo') }}"><button class="side" id="saldo-side">Saldo:</button></a>
         <a href="{{ url_for('logout') }}"><button class="side">Cerrar Sesion</button></a>
         {% endif%}
     </div>
@@ -53,6 +51,7 @@
     </div>
 
     <div class="footer">
+        <span id="user-count"></span>
         <a href="https://github.com/pabloizaguirre">Pablo</a> y Gian
     </div>
 </body>
