--- a/app/templates/saldo.html
+++ b/app/templates/saldo.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block content %}
-
+<div class="page-content">
 <div class='page-title'>Saldo</div>
 
 {% if mensaje %}
@@ -15,12 +15,12 @@
 {% endif %}
 
 <div>
-    <span>Saldo actual: {{ saldo }}</span>
+    <p><span>Saldo actual: {{ saldo }}€</span></p>
     <form action="" method="post">
-        <label>Introducir saldo</label>
         <input id="input-saldo" name="saldo" type="number" step="0.01" placeholder="Introduce saldo en euros" required>
         <input type="submit" value="Introducir" class="button-style green-button">
     </form>
+</div>
 </div>
 {% endblock%}
 
